--- a/templates/index.html
+++ b/templates/index.html
@@ -1,171 +1,380 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
-<style>
+<html>
+  <head>
+    
+    <!-- 
+    palette:
+    dark blue: #003F72
+    yellow: #FFD166
+    salmon: #EF476F
+    offwhite: #e7d7d7
+    Light Blue: #118AB2
+    Light green: #7DDF64
+    -->
 
-.node {
-  cursor: pointer;
-}
+    <meta name="viewport" content = "width=device-width, initial-scale=1.0">
+    <title>Python Programming Tutorials</title>
 
-.node circle {
-  fill: #fff;
-  stroke: steelblue;
-  stroke-width: 1.5px;
-}
+    <meta name="description" content="hello">
+    <link rel="shortcut icon" href="/static/favicon.ico">
+    <link rel="stylesheet" href="/static/css/materialize.min.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
 
-.node text {
-  font: 10px sans-serif;
-}
+    
+      <!-- Compiled and minified CSS -->
 
-.link {
-  fill: none;
-  stroke: #ccc;
-  stroke-width: 1.5px;
-}
+    <!-- Compiled and minified JavaScript -->
 
-</style>
-<body>
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
 
-var margin = {top: 20, right: 120, bottom: 20, left: 120},
-    width = 960 - margin.right - margin.left,
-    height = 800 - margin.top - margin.bottom;
+    
 
-var i = 0,
-    duration = 750,
-    root;
-
-var tree = d3.layout.tree()
-    .size([height, width]);
-
-var diagonal = d3.svg.diagonal()
-    .projection(function(d) { return [d.y, d.x]; });
-
-var svg = d3.select("body").append("svg")
-    .attr("width", width + margin.right + margin.left)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-d3.json("{{url_for ('static', filename = 'json/flare.json')}}", function(error, flare) {
-  if (error) throw error;
-
-  root = flare;
-  root.x0 = height / 2;
-  root.y0 = 0;
-
-  function collapse(d) {
-    if (d.children) {
-      d._children = d.children;
-      d._children.forEach(collapse);
-      d.children = null;
+        <style>
+    @media (min-width:992px) {
+    #aside {
+      width:250px;
     }
-  }
+    pre { tab-size: 4;}
+    .btn {background-color:#FFD166;
+        color:#000;
+          height:auto;
+        font-color:#000;
+        }
+    .btn:hover {background-color:#FFD166;
+          }
 
-  root.children.forEach(collapse);
-  update(root);
-});
 
-d3.select(self.frameElement).style("height", "800px");
+    </style>
+        
+    <!-- Google Tracking -->
+   <!-- <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-function update(source) {
+        ga('create', 'UA-51891827-1', 'auto');
+        ga('send', 'pageview');
 
-  // Compute the new tree layout.
-  var nodes = tree.nodes(root).reverse(),
-      links = tree.links(nodes);
+    </script> -->
 
-  // Normalize for fixed-depth.
-  nodes.forEach(function(d) { d.y = d.depth * 180; });
 
-  // Update the nodes…
-  var node = svg.selectAll("g.node")
-      .data(nodes, function(d) { return d.id || (d.id = ++i); });
 
-  // Enter any new nodes at the parent's previous position.
-  var nodeEnter = node.enter().append("g")
-      .attr("class", "node")
-      .attr("transform", function(d) { return "translate(" + source.y0 + "," + source.x0 + ")"; })
-      .on("click", click);
+  
+  </head>
+  
+  <body>
 
-  nodeEnter.append("circle")
-      .attr("r", 1e-6)
-      .style("fill", function(d) { return d._children ? "lightsteelblue" : "#fff"; });
+    <div class="navbar-fixed">
+      <nav style="background-color:#003F72">
+        <div class="nav-wrapper container">
+          <a href="/" class="brand-logo"><img class="img-responsive" style="width:50px; height;50px; margin-top:5px" src="/static/images/mainlogowhitethick.jpg"></a>
+          <a href="#" data-activates="navsidebar" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+          <ul class="right hide-on-med-and-down">
+          <li><i class="material-icons">search</i></li>
+          <li>
+            <form method='get' id='searchform' style='height:50px; padding-top:10px' action='/search/?l=hi'>
+              <input name='q' id="search" type="search" placeholder="search"  style='font-size:16px'>
+            </form>
+          </li>
+            
+      <li><a href="/">Home</a></li>
+      <li><a class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="sudo apt-get upgrade" href="/+=1/">+=1</a></li>
+      <li><a href="/store/python-hoodie/">Store</a></li>
+      
+      <li><a href="/community/">Community</a></li>
+        <li><a href="/login/">Log in</a></li>
+                <li><a href="/register/">Sign up</a></li>
+      
 
-  nodeEnter.append("text")
-      .attr("x", function(d) { return d.children || d._children ? -10 : 10; })
-      .attr("dy", ".35em")
-      .attr("text-anchor", function(d) { return d.children || d._children ? "end" : "start"; })
-      .text(function(d) { return d.name; })
-      .style("fill-opacity", 1e-6);
+          </ul>
+          <ul class="side-nav" id="navsidebar">
+          <li>
+            <form method='get' id='searchform' style='height:50px; padding-top:10px' action='/search/?l=hi'>
+              <input name='q' id="search" type="search" placeholder="search"  style='font-size:16px'>
+            </form>
+          </li>
+            
+      <li><a href="/">Home</a></li>
+      <li><a class="tooltipped" data-position="bottom" data-delay="50" data-tooltip="sudo apt-get upgrade" href="/+=1/">+=1</a></li>
+      <li><a href="/store/python-hoodie/">Store</a></li>
+      
+      <li><a href="/community/">Community</a></li>
+        <li><a href="/login/">Log in</a></li>
+                <li><a href="/register/">Sign up</a></li>
+      
 
-  // Transition nodes to their new position.
-  var nodeUpdate = node.transition()
-      .duration(duration)
-      .attr("transform", function(d) { return "translate(" + d.y + "," + d.x + ")"; });
+          </ul>
+        </div>
+      </nav>
+    </div>
 
-  nodeUpdate.select("circle")
-      .attr("r", 4.5)
-      .style("fill", function(d) { return d._children ? "lightsteelblue" : "#fff"; });
+    <!-- main content -->
+    <div class="container" style="max-width:1500px; min-height:100%">
+          
+          
+            
+          
+        
+          
+  <div class="row">
+  <!-- size 4 on a large screen, 12 on a small, 6 on a med -->
+    <div class="col l4 s12 m6">
+      <a href="/data-analysis-tutorials/" class="waves-effect waves-light" style="color:#000">
+      <div class="card-panel hoverable" style="height:360px; background-color:#FFFFFF;">
+        <div class="card-image">
+          <img class="responsive-img" src="/static/images/categories/3D-Matplotlib.png" style="width:250px">
+          <br><span class="card-title"><strong>Data Analysis</strong></span>
+        </div>
+        <div class="card-content">
+          <p>Learn how to use Python with Pandas, Matplotlib, and other modules to gather insights from and about your data.</p>
+        </div>
+        <div class="card-action right-align">
+          <a href="/data-analysis-tutorials/" class="waves-effect waves-light btn" style="color:#000000; background-color:#FFD166">View</a>
+        </div>
+            </div>
+            </a>
+    </div>
+    
+    <div class="col l4 s12 m6">
+      <a href="/robotics-tutorials/" class="waves-effect waves-light" style="color:#000">
+      <div class="card-panel hoverable" style="height:360px; background-color:#FFFFFF;">
+        <div class="card-image">
+          <img class="responsive-img" src="/static/images/categories/robotics_with_raspberry_pi_gopigo.jpg" style="width:250px">
+          <br><span class="card-title"><strong>Robotics</strong></span>
+        </div>
+        <div class="card-content">
+          <p>Control hardware with Python programming and the Raspberry Pi.</p>
+        </div>
+        <div class="card-action right-align">
+          <a href="/robotics-tutorials/" class="waves-effect waves-light btn" style="color:#000000; background-color:#FFD166">View</a>
+        </div>
+            </div>
+            </a>
+    </div>
+    
+    <div class="col l4 s12 m6">
+      <a href="/web-development-tutorials/" class="waves-effect waves-light" style="color:#000">
+      <div class="card-panel hoverable" style="height:360px; background-color:#FFFFFF;">
+        <div class="card-image">
+          <img class="responsive-img" src="/static/images/categories/webdev.png" style="width:250px">
+          <br><span class="card-title"><strong>Web Development</strong></span>
+        </div>
+        <div class="card-content">
+          <p>How to develop websites with either the Flask or Django frameworks for Python.</p>
+        </div>
+        <div class="card-action right-align">
+          <a href="/web-development-tutorials/" class="waves-effect waves-light btn" style="color:#000000; background-color:#FFD166">View</a>
+        </div>
+            </div>
+            </a>
+    </div>
 
-  nodeUpdate.select("text")
-      .style("fill-opacity", 1);
+  
 
-  // Transition exiting nodes to the parent's new position.
-  var nodeExit = node.exit().transition()
-      .duration(duration)
-      .attr("transform", function(d) { return "translate(" + source.y + "," + source.x + ")"; })
-      .remove();
+    <div class="col l4 s12 m6">
+      <a href="/game-development-tutorials/" class="waves-effect waves-light" style="color:#000">
+      <div class="card-panel hoverable" style="height:360px; background-color:#FFFFFF;">
+        <div class="card-image">
+          <img class="responsive-img" src="/static/images/categories/pygame-tutorials.png" style="width:250px">
+          <br><span class="card-title"><strong>Game Development</strong></span>
+        </div>
+        <div class="card-content">
+          <p>Create your own games with Python's PyGame library, or check out the multi-platform Kivy.</p>
+        </div>
+        <div class="card-action right-align">
+          <a href="/game-development-tutorials/" class="waves-effect waves-light btn" style="color:#000000; background-color:#FFD166">View</a>
+        </div>
+            </div>
+            </a>
+    </div>
+    
+    <div class="col l4 s12 m6">
+      
+      <div class="card-panel hoverable" style="height:360px; background-color:#FFFFFF;">
+      <a href="/introduction-to-python-programming/" class="waves-effect waves-light" style="color:#000">
+        <div class="card-image">
+          <img class="responsive-img" src="/static/images/categories/python-3-basics.png" style="width:250px">
+          <br><span class="card-title"><strong>Basics</strong></span>
+        </div>
+        <div class="card-content">
+          <p>Just getting started?</p> 
+          <p>Not a problem, learn the basics of programming with Python 3 here!</p>
+        </div>
+        <div class="card-action right-align">
+          <a href="/introduction-to-python-programming/" class="waves-effect waves-light btn" style="color:#000000; background-color:#FFD166">Start</a>
+        </div>
+        </a>
+            </div>
 
-  nodeExit.select("circle")
-      .attr("r", 1e-6);
 
-  nodeExit.select("text")
-      .style("fill-opacity", 1e-6);
+    </div>
+    
+    <div class="col l4 s12 m6">
+      <a href="/gui-development-tutorials/" class="waves-effect waves-light" style="color:#000">
+      <div class="card-panel hoverable" style="height:360px; background-color:#FFFFFF;">
+        <div class="card-image">
+          <img class="responsive-img" src="/static/images/categories/tkinter-gui-tutorial-with-python-3.png" style="width:250px">
+          <br><span class="card-title"><strong>GUIs</strong></span>
+        </div>
+        <div class="card-content">
+          <p>Create software with a user interface using Tkinter, PyQt, or Kivy.</p>
+        </div>
+        <div class="card-action right-align">
+          <a href="/gui-development-tutorials/" class="waves-effect waves-light btn" style="color:#000000; background-color:#FFD166">View</a>
+        </div>
+            </div>
+            </a>
+    </div>
+  </div>
 
-  // Update the links…
-  var link = svg.selectAll("path.link")
-      .data(links, function(d) { return d.target.id; });
 
-  // Enter any new links at the parent's previous position.
-  link.enter().insert("path", "g")
-      .attr("class", "link")
-      .attr("d", function(d) {
-        var o = {x: source.x0, y: source.y0};
-        return diagonal({source: o, target: o});
+      </div>
+    </div>
+
+    <!--login modal-->
+    
+<div id="modalLogin" class="modal">
+      <div class="modal-content">
+        <h2 class="center-align">Login</h2>
+        <div class="center-align">
+          <div class="divider"></div>
+          
+          <form class="col s12">
+            <div class="row center-align">
+              <div class="input-field col m10">
+                <input id="icon_prefix" type="text" class="validate">
+                <label for="icon_prefix">Username</label>
+              </div>
+              <div class="input-field col m10">
+                <input id="icon_password" type="password" class="validate">
+                <label for="icon_password">Password</label>
+              </div>
+            </div>
+          </form>
+          
+          
+          <div class="divider"></div>
+          <p>
+            <a href="#" class="btn btn-flat white modal-close">Cancel</a> &nbsp;
+            <a href="#" class="waves-effect waves-blue blue btn btn-flat modal-action modal-close">Login</a>
+          </p>
+          
+          
+        </div>
+      </div>
+    </div>
+
+
+    
+    <!--Register modal-->
+    
+    <div id="modalRegister" class="modal">
+      <div class="modal-content">
+        <h2 class="center-align">Sign up</h2>
+        <div class="center-align">
+          <div class="divider"></div>
+          
+          <form action="/register/" method=post >
+              <div class="input-field col">
+                <input id="username" type="text" class="validate">
+                <label for="username">Username</label>
+              </div>
+              <div class="input-field col">
+                <input id="password" type="password" class="validate">
+                <label for="password">Password</label>
+              </div>
+              <div class="input-field col">
+                <input id="confirm" type="password" class="validate">
+                <label for="confirm">Repeat Password</label>
+              </div>
+              
+              <div class="input-field col">
+                <input id="email" type="text" class="validate">
+                <label for="email">Email</label>
+              </div>
+
+              <div class="divider"></div>
+              <p>
+                <a href="#" class="btn btn-flat white modal-close">Cancel</a> &nbsp;
+                <button class="btn" type=submit value=Register>Sign Up</button>
+              </p>
+
+          </form>
+
+          
+
+        </div>
+      </div>
+    </div>
+
+
+
+    
+    <script>
+      $(document).ready(function(){
+        $(".button-collapse").sideNav();
+        $('.modal-trigger').leanModal();
+        $('.collapsible').collapsible({
+          accordion : false // A setting that changes the collapsible behavior to expandable instead of the default accordion style
+        });
+        $('#aside').pushpin({ top:110, bottom:500 });
       });
+    </script>
+    <script>
+      $(document).ready(function(){
+      $('.collapsible').collapsible({
+        accordion : false // A setting that changes the collapsible behavior to expandable instead of the default accordion style
+      });
+      $('select').material_select();
+      });
+    </script>
+    <script>
+    function goBack() {
+      window.history.back()
+    }
+  </script>
+    <script type="text/javascript" src="/static/js/run_prettify.js"></script>
+    
+  </body>
 
-  // Transition links to their new position.
-  link.transition()
-      .duration(duration)
-      .attr("d", diagonal);
+<footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">You've reached the end!</h5>
+                
+                <p class="grey-text text-lighten-4">Contact: Harrison@pythonprogramming.net.</p>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="/support-donate/">Support this Website!</a></li>
+                  <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/pythonprogramming.net/">Facebook</a></li>
+                  <li><a class="grey-text text-lighten-3" href="https://twitter.com/sentdex">Twitter</a></li>
+                  <li><a class="grey-text text-lighten-3" href="https://plus.google.com/+sentdex">Google+</a></li>
+                </ul>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                <h6 class="white-text">Legal stuff:</h6>
+                <ul>
+                  <li><a class="grey-text text-lighten-3" href="/about/tos/">Terms and Conditions</a></li>
+                  <li><a class="grey-text text-lighten-3" href="/about/privacy-policy/">Privacy Policy</a></li>
 
-  // Transition exiting nodes to the parent's new position.
-  link.exit().transition()
-      .duration(duration)
-      .attr("d", function(d) {
-        var o = {x: source.x, y: source.y};
-        return diagonal({source: o, target: o});
-      })
-      .remove();
+                </ul>
+              </div>
+            </div>
+          </div>
+          <a href="https://xkcd.com/353/" target='blank'><p class="grey-text right" style='padding-right:10px'>Programming is a superpower.</p></a>
+          <div class="footer-copyright">
+            <div class="container">
+            © 2016 PythonProgramming.net
+            
+            </div>
 
-  // Stash the old positions for transition.
-  nodes.forEach(function(d) {
-    d.x0 = d.x;
-    d.y0 = d.y;
-  });
-}
+          </div>
+        </footer>
 
-// Toggle children on click.
-function click(d) {
-  if (d.children) {
-    d._children = d.children;
-    d.children = null;
-  } else {
-    d.children = d._children;
-    d._children = null;
-  }
-  update(d);
-}
+</html>
 
-</script>
+
+:w
 
